--- a/CSWPF/CSWPF.csproj
+++ b/CSWPF/CSWPF.csproj
@@ -17,12 +17,16 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AngleSharp" Version="1.0.2-alpha-278" />
+      <PackageReference Include="AngleSharp.XPath" Version="2.0.1" />
       <PackageReference Include="Form" Version="0.9.28" />
       <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+      <PackageReference Include="Humanizer" Version="2.14.1" />
       <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="SteamAuth" Version="3.0.0" />
       <PackageReference Include="SteamKit2" Version="2.4.1" />
+      <PackageReference Include="zxcvbn-core" Version="8.0.0-beta0002" />
     </ItemGroup>
 
 </Project>
