--- a/CSWPF/CSWPF.csproj
+++ b/CSWPF/CSWPF.csproj
@@ -19,10 +19,14 @@
     <ItemGroup>
       <PackageReference Include="AngleSharp" Version="1.0.2-alpha-278" />
       <PackageReference Include="AngleSharp.XPath" Version="2.0.1" />
+      <PackageReference Include="CSGSI" Version="1.3.1" />
       <PackageReference Include="Form" Version="0.9.28" />
       <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
       <PackageReference Include="Humanizer" Version="2.14.1" />
       <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
+      <PackageReference Include="MahApps.Metro" Version="3.0.0-alpha0457" />
+      <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
+      <PackageReference Include="MahApps.Metro.IconPacks.Modern" Version="4.11.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="SteamAuth" Version="3.0.0" />
       <PackageReference Include="SteamKit2" Version="2.4.1" />
@@ -40,6 +44,15 @@
       <Resource Include="Icons\cow.png" />
       <None Remove="Icons\screwdriver.png" />
       <Resource Include="Icons\screwdriver.png" />
+      <None Remove="Icons\sda.png" />
+      <Resource Include="Icons\sda.png" />
+      <None Remove="Icons\mem.ico" />
+      <Resource Include="Icons\mem.ico" />
+      <None Remove="Icons\home.png" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Resource Include="Icons\home.png" />
     </ItemGroup>
 
 </Project>
