--- a/CSWPF/CSWPF.csproj
+++ b/CSWPF/CSWPF.csproj
@@ -9,14 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Page Update="Windows\MainWindow.xaml">
-        <Generator>MSBuild:Compile</Generator>
-        <XamlRuntime>Wpf</XamlRuntime>
-        <SubType>Designer</SubType>
-      </Page>
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="AngleSharp" Version="1.0.2-alpha-278" />
       <PackageReference Include="AngleSharp.XPath" Version="2.0.1" />
       <PackageReference Include="CSGSI" Version="1.3.1" />
@@ -27,6 +19,7 @@
       <PackageReference Include="MahApps.Metro" Version="3.0.0-alpha0457" />
       <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
       <PackageReference Include="MahApps.Metro.IconPacks.Modern" Version="4.11.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.7.23375.6" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="SteamAuth" Version="3.0.0" />
       <PackageReference Include="SteamKit2" Version="2.5.0-Beta.1" />
@@ -66,6 +59,19 @@
 
     <ItemGroup>
       <Resource Include="Icons\irrigation.png" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="MVVM\View\MainWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="MVVM\View\InputForm.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 </Project>
